<resources>
    <string name="app_name">MyHome</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="log_in_text">Log in!</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="logout">Log Out</string>
    <string name="confirm">Confirm</string>
    <string name="email">E-Mail</string>
    <string name="forgotpassword">Forgot?</string>
    <string name="members">Members</string>
    <string name="newmember">New Member</string>
    <string name="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="legal_info">Legal Info</string>
</resources>