<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/et_title"
        android:layout_width="85dp"
        android:layout_height="52dp"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:textColor="@color/writing"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="356dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textColor="@color/greyish"
        app:layout_constraintTop_toBottomOf="@+id/et_username"
        tools:layout_editor_absoluteX="24dp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="356dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/username"
        android:textColor="@color/greyish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_title" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="173dp"
        android:layout_height="44dp"
        android:text="@string/register"
        android:textColor="@color/orange"
        app:backgroundTint="@color/almost_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_log_in"
        app:layout_constraintVertical_bias="0.441" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:clickable="true"
        android:src="?attr/homeAsUpIndicator"
        app:backgroundTint="#2196F3"
        app:borderWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="365dp" />

    <ScrollView
        android:layout_width="322dp"
        android:layout_height="247dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="220dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>